--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 #REQUIREMENTS
 
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
+cryptography==39.0.1
 Flask==2.2.2
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
@@ -9,5 +11,6 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 numpy==1.24.2
 opencv-python==4.7.0.68
+pycparser==2.21
 Werkzeug==2.2.2
 zipp==3.12.1
