--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ colorama==0.4.6
 cryptography==39.0.1
 dnspython==2.3.0
 Flask==2.2.2
+Flask-Cors==3.0.10
+Flask-PyMongo==2.3.0
+fpdf==1.7.2
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -14,5 +17,6 @@ numpy==1.24.2
 opencv-python==4.7.0.68
 pycparser==2.21
 pymongo==4.3.3
+six==1.16.0
 Werkzeug==2.2.2
 zipp==3.12.1
